Fixed gap in some of the blocks on landing

--- a/public/styles/main_mobile.css
+++ b/public/styles/main_mobile.css
@@ -102,6 +102,7 @@
 
 	.feature {
 		width: 100%;
+		clear: both;
 	}
 
 	.feature .right, .feature .left {
